--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" charset="UTF-8">
  <title>焼き米のnote転載</title>
+ <h1>焼き米のnote転載</h1>
  <p>途中までしかできていません</p>
  <a href="https://insoy1969.github.io/r5g/index.html">github</a></br>
  <a href="https://docs.google.com/document/d/1fLWx7e2FiQrFqxJT6DZ4CxmER-gbU9mghf_G_WCiMpo/edit?usp=sharing">googleドキュメント</a></br>
